--- a/kidsbe/src/sass/style.scss
+++ b/kidsbe/src/sass/style.scss
@@ -23,15 +23,9 @@
 @import 'lion';
 @import 'potential';
 @import 'optimal';
+@import 'audio';
 @import 'footer';
-
-
-
-
-
-
-
-
+@import 'request';
 
 
 
