--- a/kidsbe/src/sass/_advantages.scss
+++ b/kidsbe/src/sass/_advantages.scss
@@ -31,7 +31,7 @@
             width: 345px;
         };
     }
-    &_descr{
+    &_description{
         color: #6D698C;
         text-align: center;
         font-family: "Faber Sans Pro";
