--- a/kidsbe/src/sass/_benefits.scss
+++ b/kidsbe/src/sass/_benefits.scss
@@ -1,15 +1,21 @@
 
 
 .benefits{
-    margin: 0 auto;
-    margin-top: 88px;
-    max-width: 1440px;
-    @media (min-width: 768px) and (max-width:1199px) {
-        margin-top: 51px;
-    };
-    @media (max-width: 767px) and (min-width: 200px) {
-        margin-top: 40px;    
-    };
+    background: #F5F4FF;
+    &_container{
+        margin: 0 auto;
+        max-width: 1440px;
+        padding-top: 88px;
+
+        @media (min-width: 768px) and (max-width:1199px) {
+            padding-top: 51px;
+            
+        };
+        @media (max-width: 767px) and (min-width: 200px) {
+            padding-top: 40px;    
+            width: 100%;
+        };
+    }
     &_header{
         color: #2D2D2D;
         text-align: center;
@@ -22,12 +28,12 @@
         margin: 0 auto;
 
         @media (min-width: 768px) and (max-width:1199px) {
-            font-size: 32px;
             font-style: normal;
             font-weight: 700;
             line-height: 46px; 
             width: 738px;
             margin: 0 auto;
+
 
         };
         @media (max-width: 767px) and (min-width: 200px) {
@@ -35,12 +41,14 @@
             font-style: normal;
             font-weight: 700;
             line-height: 32px;
-            width: 345px;
+            max-width: 345px;
+            width: 100%;
             margin: 0 auto;
+
 
         };
     }
-    &_descr{
+    &_description{
         width: 738px;
         color: #6D698C;
         text-align: center;
@@ -56,7 +64,8 @@
         };
         @media (max-width: 767px) and (min-width: 200px) {
             
-            width: 345px;
+            max-width: 345px;
+            width: 100%;
             font-size: 15px;
             font-style: normal;
             font-weight: 400;
@@ -88,7 +97,8 @@
             background: #FFF;
             padding: 0 30px 0 30px;
             @media (min-width: 768px) and (max-width:1199px) {
-                width: 359px;
+                max-width: 359px;
+                width: 100%;
                 height: 335px;
                 &:nth-child(3),&:nth-child(4){
                     margin-top: 20px;
@@ -96,7 +106,8 @@
             };
             @media (max-width: 767px) and (min-width: 200px) {
                 margin-top: 20px;
-                width: 345px;
+                max-width: 345px;
+                width: 100%;
                 height: 270px;
                 &:first-child{
                     margin-top: 0;
@@ -124,7 +135,7 @@
             }
         }
     }
-    &_descr_mini{
+    &_description_mini{
         width: 738px;
         color: #6D698C;
         text-align: center;
@@ -166,6 +177,7 @@
         margin-top: 23px;
         left: 50%;
         transform: translateX(-50%);
+        transition: all 0.5s;
         &:hover{
             background: #FFCF3C;
         }
