--- a/kidsbe/src/sass/_books.scss
+++ b/kidsbe/src/sass/_books.scss
@@ -1,11 +1,7 @@
 .books{
 
     background-color: #F5F4FF;
-    margin: 0 auto;
-    max-width: 1440px;
-    position: relative;
-    margin-top: 92px;
-    height: 720px;
+    
     .books_left{
         display: flex;
         flex-direction: column;
@@ -13,8 +9,14 @@
         padding-left: 94px;
         float: right;
         margin-top: 127px;
-        z-index: 2;
-        
+        z-index: 2; 
+    }
+    &_container{
+        margin: 0 auto;
+        max-width: 1440px;
+        position: relative;
+        padding-top: 92px;
+        height: 720px;
     }
     &_header{
         position: relative;
@@ -25,7 +27,7 @@
         z-index: 2;
 
     }
-    &_descr{
+    &_description{
         display: inline-block;
         float: right;
         max-width: 504px;
@@ -51,7 +53,7 @@
         width: 739px;
         height: 739px;
         margin-left: 39px;
-        top: 70px;
+        top: 100px;
         
         &_items{
             position: absolute;
@@ -115,12 +117,16 @@
 
 
 .books_small{
-    margin: 0 auto;
-    position: relative;
-    height: auto;
+    background-color: #F5F4FF;
+    
+    &_container{
 
-    max-width: 950px;
-    overflow: hidden;
+        margin: 0 auto;
+        position: relative;
+        height: auto;
+        max-width: 950px;
+        overflow: hidden;
+    }
     &_header{
         color: #2D2D2D;
         text-align: center;
@@ -130,11 +136,12 @@
         font-weight: 700;
         line-height: 46px; 
         @media (max-width: 767px) and (min-width: 200px) {
+            margin-top: 57px;
             font-size: 22px;
             line-height: 32px; /* 145.455% */
         };
     }
-    &_descr{
+    &_description{
         position: relative;
         color: #2D2D2D;
         text-align: center;
@@ -175,11 +182,13 @@
         transform: translateX(-150px) translateY(15px);
         @media (max-width: 767px) and (min-width: 200px) {
                 overflow: hidden;
-                width: 455px;
-                height: 455px;
+                max-width: 455px;
+                width: 100%;
+                max-height: 455px;
+                height: 100%;
                 margin: 0 auto;
                 // transform: translateX(150px) translateY(-15px);
-                top: 160px;
+                top: 200px;
                 left: 50%;
                 transform: translate(calc(-50% - 10px), );
 
@@ -209,11 +218,15 @@
             margin-bottom: 80px;
         };
         @media (max-width: 767px) and (min-width: 200px) {
+            margin: 0 auto;
             margin-top: 388px;
             float: none;
             flex-direction: column;
             width: 100%;
             padding: 0 15px 0 15px;
+            &_item:nth-child(3) ,&_item:nth-child(1){
+                margin-right: 0px;
+            }
             &_item:nth-child(1),
             &_item:nth-child(2) {
             margin-bottom: 10px;
@@ -241,6 +254,7 @@
                 flex-direction: column;
                 width: 100%;
                 padding: 18px 26px 0 26px;
+                margin: 0 auto;
                 margin-bottom: 10px;
             };
         }
