--- a/kidsbe/src/sass/_footer.scss
+++ b/kidsbe/src/sass/_footer.scss
@@ -86,7 +86,9 @@
             width: 40px;
             height: 40px;
             border-radius: 12px;
-            border: 1px solid #E1DEFC; 
+            border: 1px solid #E1DEFC;
+            transition: all 0.5s;
+
             &:hover{
                 background: #E1DEFC;
             };
