--- a/kidsbe/src/sass/_header.scss
+++ b/kidsbe/src/sass/_header.scss
@@ -36,7 +36,7 @@
         display: flex;
         
 
-        &-descr{
+        &-description{
             margin-top: 9px;
             color: #AFACC9;
             font-family: "Faber Sans Pro";
@@ -92,6 +92,8 @@
                 height: 40px;
                 border-radius: 12px;
                 border: 1px solid #E1DEFC; 
+                transition: all 0.5s;
+
                 &:hover{
                     background: #5B45FF;
                 };
@@ -188,6 +190,8 @@
                     // font-style: normal;
                     font-weight: 700;
                     line-height: 30px; /* 187.5% */  
+                    transition: all 0.2s;
+
                     &:hover{
                         color: #513CF3;
                     }
@@ -199,6 +203,7 @@
 
     .burger_menu{
         display: none;
+
         &-active{
             display: block;
         }
