--- a/kidsbe/src/sass/_lion.scss
+++ b/kidsbe/src/sass/_lion.scss
@@ -7,27 +7,29 @@
 };
 
 .lion{
-    display: flex;
-    flex-direction: row-reverse;
-    margin: 0 auto;
-    margin-top: 102px;
-    max-width: 1440px;
-    align-items:center;
-    overflow: hidden;
-    @media (min-width: 1440px) {
-        padding-left: 146px;
-
-    };
-    @media (min-width: 768px) and (max-width:1199px) {
-        flex-direction: column;
-        align-items: center;
-        margin-top: 64px;
-    };
-    @media (max-width: 767px) and (min-width: 200px) {
-        flex-direction: column;
-        margin-top: 51px;
+    background-color: #F5F4FF;
     
-    };
+    &_container{
+        display: flex;
+        flex-direction: row-reverse;
+        margin: 0 auto;
+        padding-top: 102px;
+        max-width: 1440px;
+        align-items:center;
+        overflow: hidden;
+        @media (min-width: 1440px) {
+            padding-left: 146px;
+        };
+        @media (min-width: 768px) and (max-width:1199px) {
+            flex-direction: column;
+            align-items: center;
+            padding-top: 64px;
+        };
+        @media (max-width: 767px) and (min-width: 200px) {
+            flex-direction: column;
+            padding-top: 51px;
+        };
+    }
     &_header{
         color: #2D2D2D;
         text-align: center;
@@ -85,7 +87,7 @@
             font-weight: 700;
             line-height: 50px;
         }
-        &_descr{
+        &_description{
             width: 511px;
             color: #6D698C;
             font-family: "Faber Sans Pro";
