--- a/kidsbe/src/sass/_potential.scss
+++ b/kidsbe/src/sass/_potential.scss
@@ -6,27 +6,31 @@
 };
 
 .potential{
-    margin: 0 auto;
-    margin-top: 83px;
-    width: 1148px;
-    height: 623px;
-    border-radius: 30px 30px 200px 30px;
-    background: #EAE7FF;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    @media (min-width: 768px) and (max-width:1199px) {
-        width: 738px;
+    background-color: #F5F4FF;
+    
+    &_container{
+        margin: 0 auto;
+        margin-top: 83px;
+        width: 1148px;
         height: 623px;
-        margin-top: 46px;
-        
-    };
-    @media (max-width: 767px) and (min-width: 200px) {
-        width: 100%;
-        height: 542px;
-        border-radius:0;
-        margin-top: 0;
-    };
+        border-radius: 30px 30px 200px 30px;
+        background: #EAE7FF;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        @media (min-width: 768px) and (max-width:1199px) {
+            width: 738px;
+            height: 623px;
+            margin-top: 46px;
+            
+        };
+        @media (max-width: 767px) and (min-width: 200px) {
+            width: 100%;
+            height: 542px;
+            border-radius:0;
+            margin-top: 0;
+        };
+    }
     &_img{
         @media (min-width: 768px) and (max-width:1199px) {
     
@@ -69,7 +73,7 @@
                 line-height: 32px;
             };
         }
-        &_descr{
+        &_description{
             margin-top: 25px;
             width: 544px;
             color: #2D2D2D;
@@ -110,6 +114,8 @@
         font-style: normal;
         font-weight: 400;
         line-height: 30px;
+        transition: all 0.5s;
+
         &:hover{
             background: #2DBC7C;
         };
