--- a/kidsbe/src/sass/_promo.scss
+++ b/kidsbe/src/sass/_promo.scss
@@ -1,12 +1,16 @@
 .promo{
     position: relative;
-    width: 100%;
-    max-width: 1440px;
-    padding:54px 79px 0 146px ;
-    margin: 0 auto;
-    @media (min-width: 200px) and (max-width:1199px) {
-        padding: 0 ;
-    };
+    background: #F5F4FF;
+    &_container{
+        position: relative;
+        width: 100%;
+        max-width: 1440px;
+        padding:54px 79px 0 146px ;
+        margin: 0 auto;
+        @media (min-width: 200px) and (max-width:1199px) {
+            padding: 0 ;
+        }; 
+    }
     &_header{
         width: 600px;
         float: left;
@@ -22,7 +26,7 @@
 
         };
     }
-    &_descr{
+    &_description{
         margin-top: 20px;
         width: 466px;
         z-index: 1;
@@ -69,8 +73,9 @@
         };
         @media (max-width: 767px) and (min-width:200px) {
             padding: 0;
-            width: 344px;
-            height: 242px;
+            max-width: 344px;
+            max-height: 242px;
+            width: 100%;
             position: relative;
             display: block;
             margin: 0 auto;
@@ -93,7 +98,9 @@
         @media (max-width: 767px) and (min-width:200px) {
             margin: 0 auto;
             height: 120px;
-            width: 345px;
+            width: 100%;
+            max-width: 345px;
+
             display: flex;
             flex-wrap: wrap;
         };
@@ -105,6 +112,7 @@
             border-radius: 15px 15px 15px 50px;
             background-color: #E8E5FB;
             @media (max-width: 767px) and (min-width:200px) {
+                width: 100%;
                 border-radius: 15px 50px 15px 50px;
             };
             &_img{
@@ -141,6 +149,8 @@
             font-style: normal;
             font-weight: 400;
             line-height: 30px; 
+            transition: all 0.5s;
+
             &:hover{
                 background: #EF584E;
             };
@@ -149,7 +159,8 @@
                 position: relative;
                 margin: 0 auto;
                 margin-top: 10px;
-                width: 345px;
+                // width: 345px;
+                width: 100%;
             };
         }
 
