--- a/kidsbe/src/sass/_request.scss
+++ b/kidsbe/src/sass/_request.scss
@@ -50,7 +50,7 @@
         display: flex;
         flex-direction: column;
         &_item{
-            &_descr{
+            &_description{
                 margin-top: 18px;
                 color: #2D2D2D;
                 font-family: "Faber Sans Pro";
@@ -118,6 +118,8 @@
             font-weight: 400;
             line-height: 30px;
             margin-bottom: 14px;
+            transition: all 0.5s;
+
             &:hover{
                 background: #EF584E;
             };
