--- a/kidsbe/src/sass/_thank.scss
+++ b/kidsbe/src/sass/_thank.scss
@@ -29,7 +29,7 @@
         font-weight: 400;
         line-height: 30px;
     }
-    &_descr{
+    &_description{
         margin-top: 71px;
         color: #8682A7;
         text-align: center;
@@ -54,6 +54,8 @@
             display: flex;
             align-items:center;
             justify-content: center;
+            transition: all 0.5s;
+
             &:nth-child(1){
                 background: linear-gradient(180deg, #358CE2 0%, #A23693 39.37%, #EB713B 73.75%, #FED97B 100%);  
             }
@@ -94,6 +96,8 @@
         font-style: normal;
         font-weight: 400;
         line-height: 30px;
+        transition: all 0.5s;
+
         &:hover{
             background: #2DBC7C;
             color:#FFF;
