--- a/kidsbe/src/sass/style.scss
+++ b/kidsbe/src/sass/style.scss
@@ -3,12 +3,16 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    
+    @media (min-width: 375px) {
+        padding-left: 0px;
+        padding-right: 0px;
+    };
 }
-.wraper{
+body{
     background-color: #F5F4FF;
-    height: 100%;
+
 }
+
 
 
 @import 'header';
@@ -77,7 +81,7 @@
     };   
 }
 
-.txt_descr{
+.txt_description{
     color: #8682A7;
     font-family: "Faber Sans Pro";
     font-size: 20px;
