add new sections ytyt

--- a/ytyt/sass/_promo.scss
+++ b/ytyt/sass/_promo.scss
@@ -149,27 +149,61 @@
         background: linear-gradient(260deg, #FFF -31.68%, rgba(255, 255, 255, 0.00) 87.52%), rgba(255, 255, 255, 0.30);
         box-shadow: 0px 30px 100px 0px rgba(0, 129, 170, 0.06);
         backdrop-filter: blur(30px);
+        
         &_1{
             width: 1705px;
             height: 1705px;
-
+            @media (min-width: 200px) and (max-width:1199px) {
+                width: 1100px;
+                height: 1075.401px;
+            };
         }
         &_2{
             width: 1236.175px;
             height: 1236.175px;
+            @media (min-width: 200px) and (max-width:1199px) {
+                width: 797.532px;
+                height: 779.698px;
+            };
         }
         &_3{
             width: 907.597px;
             height: 907.597px;
+            @media (min-width: 200px) and (max-width:1199px) {
+                width: 585.546px;
+                height: 572.452px;
+            };
         }
         &_4{
             width: 627.103px;
             height: 627.103px;
+            @media (min-width: 200px) and (max-width:1199px) {
+                width: 404.583px;
+                height: 395.535px;
+            };
         }
         &_5{
             width: 399.384px;
             height: 399.384px;
-        }
+            @media (min-width: 200px) and (max-width:1199px) {
+                width: 257.667px;
+                height: 251.905px;
+            };
+        }  
+    }
 
+    &_center{
+        z-index: -1;
+        position: absolute;
+        top: 50%; /* Move the element 50% down from the top */
+        left: 50%; /* Move the element 50% from the left */
+        transform: translate(-546px, -250px);
+        
+        &_img{
+            position: absolute;
+            top: 22px;
+            width: 210px;
+            height: 219.272px;
+        }
     }
 }
