coast section beta

--- a/ytyt/css/style.css
+++ b/ytyt/css/style.css
@@ -994,6 +994,298 @@
           width: 249px;
           text-align: center; } }
 
+.help {
+  background-color: #fff;
+  border-radius: 80px;
+  padding: 91px 0 89px 0; }
+  @media (max-width: 767px) and (min-width: 200px) {
+    .help {
+      border-radius: 30px;
+      padding: 10px 0 10px 0; } }
+  .help_title {
+    color: #22253b;
+    font-family: Gilroy-SemiBold;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 30px;
+    letter-spacing: 0%;
+    text-align: left; }
+    @media (min-width: 768px) and (max-width: 1199px) {
+      .help_title {
+        font-size: 25px;
+        line-height: 23px; } }
+    @media (max-width: 767px) and (min-width: 200px) {
+      .help_title {
+        font-size: 20px;
+        line-height: 19px; } }
+  .help_description {
+    color: #22253b;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-top: 18px; }
+    @media (min-width: 768px) and (max-width: 1199px) {
+      .help_description {
+        font-size: 14px;
+        line-height: 15px; } }
+    @media (max-width: 767px) and (min-width: 200px) {
+      .help_description {
+        font-size: 12px;
+        line-height: 17px;
+        margin-top: 15px; } }
+  .help_grid {
+    max-width: 1161px;
+    width: 100%;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    row-gap: 30px;
+    -webkit-column-gap: 30px;
+            column-gap: 30px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+    @media (min-width: 768px) and (max-width: 1199px) {
+      .help_grid {
+        max-width: 650px;
+        width: 100%;
+        grid-column-gap: 10px;
+        grid-row-gap: 10px; } }
+    @media (max-width: 767px) and (min-width: 200px) {
+      .help_grid {
+        grid-column-gap: 10px;
+        grid-row-gap: 10px;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        max-width: 100%;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column; } }
+    .help_grid_item {
+      border-radius: 40px;
+      background: #eaf2f5;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+      .help_grid_item:nth-child(1) {
+        width: 401px;
+        height: 313px; }
+        .help_grid_item:nth-child(1) .help_img_double_programing {
+          width: 271px;
+          height: 231px; }
+        @media (min-width: 200px) and (max-width: 1199px) {
+          .help_grid_item:nth-child(1) {
+            max-width: 300px;
+            width: 100%;
+            height: 243px; }
+            .help_grid_item:nth-child(1) .help_img_double_programing {
+              width: 205px;
+              height: 175px; } }
+      .help_grid_item:nth-child(2) {
+        height: 313px;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start;
+        padding: 0 100px 0 100px;
+        max-width: 730px;
+        width: 100%; }
+        @media (min-width: 200px) and (max-width: 1199px) {
+          .help_grid_item:nth-child(2) {
+            max-width: 300px;
+            width: 100%;
+            height: 243px;
+            padding: 0 20px 0 20px; } }
+        .help_grid_item:nth-child(2) .help_description {
+          max-width: 549px;
+          width: 100%; }
+          .help_grid_item:nth-child(2) .help_description:nth-child(2) {
+            max-width: 435px;
+            width: 100%; }
+      .help_grid_item:nth-child(3) {
+        height: 290px;
+        max-width: 730px;
+        width: 100%;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start;
+        padding: 0 100px 0 100px; }
+        @media (min-width: 200px) and (max-width: 1199px) {
+          .help_grid_item:nth-child(3) {
+            max-width: 300px;
+            width: 100%;
+            height: 243px;
+            padding: 0 20px 0 20px; } }
+        @media (max-width: 767px) and (min-width: 200px) {
+          .help_grid_item:nth-child(3) {
+            -webkit-box-ordinal-group: 2;
+                -ms-flex-order: 1;
+                    order: 1; } }
+      .help_grid_item:nth-child(4) {
+        width: 400px;
+        height: 290px; }
+        .help_grid_item:nth-child(4) .help_img_coding {
+          width: 258px;
+          height: 259px; }
+          .help_grid_item:nth-child(4) .help_img_coding .help_description {
+            max-width: 500px;
+            width: 100%; }
+        @media (min-width: 200px) and (max-width: 1199px) {
+          .help_grid_item:nth-child(4) {
+            max-width: 300px;
+            width: 100%;
+            height: 243px; }
+            .help_grid_item:nth-child(4) .help_img_coding {
+              width: 206px;
+              height: 207px; } }
+
+.coast_advantages {
+  max-width: 1160px;
+  width: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-column-gap: 70px;
+          column-gap: 70px; }
+  @media (max-width: 767px) and (min-width: 200px) {
+    .coast_advantages {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; } }
+  .coast_advantages_item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-column-gap: 29px;
+            column-gap: 29px; }
+    @media (min-width: 768px) and (max-width: 1199px) {
+      .coast_advantages_item {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-column-gap: 0px;
+                column-gap: 0px;
+        row-gap: 10px; } }
+    @media (max-width: 767px) and (min-width: 200px) {
+      .coast_advantages_item {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-column-gap: 0px;
+                column-gap: 0px;
+        row-gap: 10px; } }
+    .coast_advantages_item_img {
+      width: 59px;
+      height: 59px; }
+      @media (max-width: 767px) and (min-width: 200px) {
+        .coast_advantages_item_img {
+          width: 55px;
+          height: 55px; } }
+    .coast_advantages_item_description {
+      color: #22253b;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 21px;
+      letter-spacing: 0%;
+      text-align: left; }
+      .coast_advantages_item_description:nth-child(2) {
+        min-width: 158px; }
+      @media (max-width: 767px) and (min-width: 200px) {
+        .coast_advantages_item_description {
+          min-width: 168px;
+          max-width: 300px;
+          font-size: 12px;
+          font-weight: 400;
+          line-height: 17px;
+          letter-spacing: 0%;
+          text-align: center; } }
+.coast_form {
+  height: 218px;
+  border-radius: 30px;
+  background: #eaf2f5;
+  -webkit-column-gap: 23px;
+          column-gap: 23px;
+  row-gap: 17px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  @media (max-width: 767px) and (min-width: 200px) {
+    .coast_form {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      height: auto;
+      padding-top: 42px;
+      padding-bottom: 54px; } }
+  .coast_form .coast_button {
+    margin-top: 0px; }
+  @media (max-width: 767px) and (min-width: 200px) {
+    .coast_form_img {
+      width: 70px; } }
+  .coast_form_description {
+    max-width: 600px;
+    color: #22253b;
+    Font-weight: 400;
+    font-size: 17px;
+    line-height: 22px; }
+    @media (min-width: 768px) and (max-width: 1199px) {
+      .coast_form_description {
+        font-size: 15px;
+        max-width: 400px; } }
+    @media (max-width: 767px) and (min-width: 200px) {
+      .coast_form_description {
+        max-width: 251px;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 22px;
+        text-align: center;
+        width: 100%; } }
+
 .hideormin1200 {
   display: none; }
   @media (min-width: 1200px) {
